# surveyforge

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: llm_routing.yaml
src/litweave/: __init__.py  cli.py  graph.py
src/litweave/agents/: __init__.py  planner.py  researcher_deep.py  researcher_wide.py
src/litweave/llm/: rate_limit.py  router.py
src/litweave/prompts/: __init__.py  loader.py  planner.md  researcher_wide.md  synthesizer.md
src/litweave/prompts/shared/: source_integrity_rules.md
src/litweave/runtime/: __init__.py  budget.py  db.py  evidence.py  observability.py  runs.py  schema.sql  tool_gateway.py  trust.py
src/litweave/schemas/: __init__.py  citations.py  paper_id.py  planner.py  research.py  synthesis.py
src/litweave/synthesis/: __init__.py  stub.py  synthesizer.py
src/litweave/tools/: __init__.py  arxiv_lookup.py  arxiv_search.py  s2_lookup.py  web_search.py
src/litweave/writing/: __init__.py  stub.py
src/surveyforge/: __init__.py  cli.py  graph.py  state.py
src/surveyforge/agents/: __init__.py  planner.py  researcher_deep.py  researcher_wide.py
src/surveyforge/llm/: observability.py  providers.py  rate_limit.py  roles.py  router.py  structured_output.py
src/surveyforge/prompts/: loader.py  researcher_deep.md  researcher_wide.md
src/surveyforge/prompts/shared/: citation_rules.md
src/surveyforge/runtime/: __init__.py  budget.py  db.py  errors.py  evidence.py  observability.py  runs.py  schema.sql  tool_gateway.py
src/surveyforge/schemas/: __init__.py  citations.py  paper_id.py  planner.py  research.py
src/surveyforge/synthesis/: __init__.py  stub.py
src/surveyforge/tools/: __init__.py  arxiv_lookup.py  arxiv_search.py  s2_lookup.py  web_search.py
src/surveyforge/writing/: __init__.py  stub.py
tests/: conftest.py  test_cli.py  test_graph_smoke.py  test_import.py
tests/agents/: conftest.py  test_planner_unit.py  test_researcher_deep_unit.py  test_researcher_wide_unit.py  test_router_binding.py  test_structured_output_config.py  test_synthesizer_unit.py
tests/agents/integration/: test_planner_live.py  test_researcher_deep_live.py  test_researcher_wide_live.py
tests/e2e/: __init__.py  test_bounded_smoke.py  test_section_draft_live.py
tests/llm/: test_observability.py  test_providers.py  test_rate_limit.py  test_roles.py  test_router.py  test_routing_config.py  test_structured_output.py
tests/llm/integration/: conftest.py  test_deepseek_hello.py  test_glm_hello.py  test_minimax_hello.py  test_qwen_hello.py  test_structured_output_live.py
tests/prompts/: test_registry.py
tests/runtime/: conftest.py  test_budget.py  test_db_schema.py  test_errors.py  test_evidence.py  test_observability.py  test_runs.py  test_tool_gateway.py  test_trust.py
tests/schemas/: test_schemas.py
tests/schemas/fixtures/: planner_happy.json  researcher_deep_edge_empty_pdf.json  researcher_wide_schema_violation.json
tests/tools/: conftest.py  test_tool_wrappers.py
tests/tools/integration/: test_arxiv_live.py
