[project]
name = "surveyforge"
version = "0.1.0"
description = "Multi-agent academic survey generator (AI/ML focus)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "langchain>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "langfuse>=2.40,<3",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.20",
    "types-jsonschema>=4.23",
    "types-pyyaml>=6.0",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
surveyforge = "surveyforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surveyforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external APIs (default-collected by `-m integration`)",
    "manual: opportunistic / manual-only tests; NOT collected by default integration runs",
]
addopts = "-m 'not integration and not manual'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/surveyforge"]
